--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-; addopts = --alluredir allure-results --reruns=2
+addopts = --alluredir allure-results --reruns=2
 
 markers =
     smoke: маркер для тестов smoke
